--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,16 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             // "args": ["--config-file", "/home/shiyue/flsim/FLSim/examples/configs/cifar10_config.json"]
+        },
+        {
+            "name": "Python: generate_petastorm_mnist",
+            "type": "python",
+            "request": "launch",
+            // "program": "${file}",
+            "program": "${workspaceFolder}/petastorm/petastorm/examples/mnist/generate_petastorm_mnist.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": ["--download-dir", "mnt/cephfs/minist_dataset", "--output-url", "file:///mnt/cephfs/minist_dataset"]
         }
     ]
 }
